# roundtable

./: .gitignore  CONTEXT.md  LICENSE  README.md  README.zh.md  ROADMAP.md  pyproject.toml  start-roundtable.ps1
.github/workflows/: tests.yml
roundtable/: __init__.py  __main__.py  audit.py  control.py  lease.py  models.py  orchestrator.py  participants.py  project.py  prompts.py  transcript.py  webui.py
roundtable/adapters/: __init__.py  claude.py  codex.py  mock.py
tests/: browser_smoke.cjs  test_adapters.py  test_audit.py  test_control.py  test_models.py  test_orchestrator.py  test_participants.py  test_project.py  test_webui.py
