[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "roundtable"
version = "0.3.0.dev0"
description = "A human-in-the-loop collaboration workbench for CLI coding agents."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "dujunyi416" }]
keywords = ["claude-code", "codex", "multi-agent", "orchestrator", "cli"]
classifiers = [
    "Environment :: Console",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
]

[project.scripts]
roundtable = "roundtable.__main__:main"

[project.urls]
Repository = "https://github.com/dujunyi416/roundtable"

[tool.setuptools.packages.find]
include = ["roundtable*"]
